[tool.poetry]
name = "gateway"
version = "2.14.1"
description = "OpenMotics Gateway"
authors = []

[tool.poetry.dependencies]
python = "~2.7"

apscheduler = "^3.6.3"
cherrypy = "^3.2.2"
croniter = "^0.3.20"
decorator = "^4.4.0"
intelhex = "^1.5"
msgpack = "^0.6.1"
peewee = "^3.13.1"
peewee-migrate = "^1.1.6"
psutil = "^5.6.7"
pyserial = "^3.4.0"
requests = "^2.18"
simple-pid = "^0.2.4"
sqlalchemy = "^1.3.12"
typing = "^3.7.4"
ujson = "^1.35"
ws4py = "^0.5.1"

[tool.poetry.dev-dependencies]
hypothesis = "^4.57.1"
ipython = "^5.8.0"
isort = "^4.3.21"
mock = "^2.0.0"
nose = "^1.3.7"
pytest = "^4.6.8"
xmlrunner = "^1.7.7"

[tool.isort]
multi_line_output = 2

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]
