[metadata]
name = gateway
version = attr:gateway.__version__
description = OpenMotics Gateway (backend)
url = https://github.com/openmotics/gateway
license = AGPL3
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[options]
python_requires = >= 2.7, < 3.0
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[bdist_wheel]
universal = true
